<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="16dp"
	android:gravity="center_horizontal"
	android:background="@drawable/bg">

	<EditText
		android:id="@+id/et_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/enter_password"
		android:inputType="textPassword"
		android:layout_marginBottom="16dp" />

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/btn_login"

		android:layout_width="330dp"
		android:layout_height="68dp"
		android:layout_marginBottom="16dp"
		android:background="@drawable/button"
		android:text="@string/login"  />


	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/btn_language"

		android:layout_width="330dp"
		android:layout_height="68dp"
		android:background="@drawable/button"
		android:text="@string/language" />

</LinearLayout>
