<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp"
		android:gravity="center_horizontal">

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/employee_trash_button"
			android:layout_width="330dp"
			android:layout_height="68dp"
			android:background="@drawable/button"
			android:text="@string/employee_trash" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/criteria_trash_button"
			android:layout_width="330dp"
			android:layout_height="68dp"
			android:background="@drawable/button"
			android:text="@string/criteria_trash" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/btn_back"
			android:layout_width="330dp"
			android:layout_height="68dp"
			android:background="@drawable/button"
			android:text="@string/back"/>

	</LinearLayout>
</ScrollView>
