<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp"
		android:gravity="center_horizontal">

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/btn_save_excel"
			android:layout_width="330dp"
			android:layout_height="68dp"
			android:background="@drawable/button"
			android:text="@string/save_to_excel"
			android:layout_marginBottom="16dp"/>

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/btn_load_excel"
			android:layout_width="330dp"
			android:layout_height="68dp"
			android:background="@drawable/button"
			android:text="@string/load_from_excel"
			android:layout_marginBottom="16dp"/>

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/btn_back"
			android:layout_width="330dp"
			android:layout_height="68dp"
			android:background="@drawable/button"
			android:text="@string/back"
			android:layout_gravity="center_horizontal"/>

	</LinearLayout>
</ScrollView>
